tests/test_assets/semantic/invalid/mutation/statement_only_operands.cog
test::() -> void {
    x: i32 = 0;
    y := 1 + (x = 2);
}