tests/test_assets/semantic/invalid/mutation/statement_only_operands.expected
semantic error at line 3: assignment cannot be used as a value; it is a statement
1 semantic error generated.
